# transcriber

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
src/legacy/: test_speech2text.py
src/notebooks/: 212-pyannote-speaker-diarization.ipynb  SpeakerDiarization.ipynb  annote_diarization.ipynb  api_test.ipynb  test_openai.ipynb  visualize_diarization.ipynb  whisper_test.ipynb
src/script/base/: annote_diarization.py  diarization.py  formattingDocument.py  microphone.py  record.py  speech2textTranscript.py  transcribe_and_diarize.py  whisperTranscript.py
src/script/meta/: record_printlines.py  run_multiple_speech2text.py
utils/: __init__.py  colors.py  jsons.py  loggers.py
utils/note/: demo_gridspec04.py
