[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["koh <koh@uehara.to>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
